=== HEAD

* Fix literalization of DateTime objects on 1.9 for databases that support fractional seconds (jeremyevans)

=== 3.15.0 (2010-09-01)

* Make emulated alter_table tasks on SQLite correctly preserve foreign keys (DirtYiCE, jeremyevans)

* Add support for sequel_pg to the native postgres adapter when pg is used (jeremyevans)

* Make class MyModel < Sequel::Model(DB[:table]) reload safe (jeremyevans)

* Fix a possible error when using the do (DataObjects) adapter with postgres (jeremyevans)

* Handle a many_to_many :join_table option that uses an implicit alias (mluu, jeremyevans)

* Work around bug in Microsoft's SQL Server JDBC Adapter version 3.0 (jfirebaugh)

* Make eager graphing a model that uses an aliased table name work correctly (jeremyevans)

* Make class_table_inheritance plugin work with non integer primary keys on SQLite (jeremyevans, russm)

* Add :auto_increment field to column schema values on MySQL if the column is auto incrementing (dbd)

* Handle DSN-less ODBC connections better (Ricardo Ramalho)

* Exclude temporary tables when parsing the schema on PostgreSQL (jeremyevans) (#306)

* Add Mysql2 adapter (brianmario)

* Handle Mysql::Error exceptions when disconnecting in the MySQL adapter (jeremyevans)

* Make typecasting work correctly for attributes loaded lazily when using the lazy attributes plugin (jeremyevans)

=== 3.14.0 (2010-08-02)

* Handle OCIInvalidHandle errors when disconnecting in the Oracle adapter (jeremyevans)

* Allow calling Model.create_table, .create_table! and .create_table? with blocks containing the schema in the schema plugin (jfirebaugh)

* Fix handling of a :conditions options in the rcte plugin (mluu)

* Fix aggregate methods such as Dataset#sum and #avg on MSSQL on datasets with an order but no limit (mluu)

* Fix rename_table on MSSQL for case sensitive collations and schemas (mluu)

* Add a :single_root option to the tree plugin, for enforcing a single root value via a before_save hook (jfirebaugh)
