@@ -927,7 +927,7 @@ describe "Dataset identifier methods" do
     @db.drop_table(:a)
   end
   
-  cspecify "#identifier_output_method should change how identifiers are output", [:mysql2] do
+  cspecify "#identifier_output_method should change how identifiers are output", [:mysql2], [:swift] do
     @ds.identifier_output_method = :upcase
     @ds.first.should == {:AB=>1}
     @ds.identifier_output_method = :uprev
